# dynalab

./: README.md
simulator/: RUNS.md  RUN_APP.md  pyproject.toml
simulator/scripts/: build_exe.py  dev_run.py
simulator/simulator/: __init__.py  __main__.py  app.py  log.py  settings.py  version.py
simulator/simulator/blocks/: __init__.py  params.py  registry.py  spec.py
simulator/simulator/blocks/lti/: __init__.py  delay.py  gain.py  gain_flipped.py  saturate.py  ss.py  sum.py  sum_glyph.py  tf.py  tf_flipped.py
simulator/simulator/blocks/sinks/: __init__.py  scope.py  terminator.py
simulator/simulator/blocks/sources/: __init__.py  constant.py  impulse.py  step.py
simulator/simulator/compilers/: __init__.py  bdsim_compiler.py  control_compiler.py  pathsim_compiler.py
simulator/simulator/core/ir/: __init__.py  diff.py  normalize.py  schema_v1.json  types.py  validate.py
simulator/simulator/core/project/: __init__.py  migrate.py  project_io.py
simulator/simulator/core/signals/: __init__.py  dimensions.py  naming.py  sample_time.py
simulator/simulator/engines/: __init__.py  control_engine.py  results.py  sim_engine.py
simulator/simulator/in/demos/: feedback_control_sum.simproj  nested_loops.simproj  unity_feedback.simproj
simulator/simulator/ui/: __init__.py  actions.py  dialogs.py  main_window.py
simulator/simulator/ui/graph/: __init__.py  graph_host.py  node_factory.py  session_adapter.py  smart_pipes.py
simulator/simulator/ui/inspector/: __init__.py  editors.py  inspector_panel.py
simulator/simulator/ui/nodes/: __init__.py  base_node.py  (+12 more)
(+9 files in other folders)
